refactor: complete CRUD for product and category